--- a/Makefile.osx
+++ b/Makefile.osx
@@ -24,9 +24,9 @@ LUA_LIB = -L./lua-5.2.4/install/lib -llua -ldl
 
 # Typically if installed,
 #  FFTW3_INC can be left empty
-#  FFTW3_LIB = -lfftw3
+FFTW3_LIB = -lfftw3
 FFTW3_INC =
-FFTW3_LIB =
+#FFTW3_LIB =
 
 # Typically,
 #  PTHREAD_INC = -DHAVE_UNISTD_H -lpthread
@@ -48,7 +48,8 @@ MPI_LIB =
 CXX = c++
 CC  = cc
 
-CFLAGS = -O3 -fPIC
+#CFLAGS = -O3 -fPIC -Wno-c++11-narrowing
+CFLAGS = -O3 -fPIC -Wno-c++11-narrowing
 
 # options for Sampler module
 OPTFLAGS = -O3
@@ -263,8 +264,9 @@ FunctionSampler2D.so: modules/function_sampler_2d.c modules/function_sampler_2d.
 
 S4_pyext: objdir $(S4_LIBNAME)
 	echo "$(LIBS)" > $(OBJDIR)/tmp.txt
-	sh gensetup.py.sh $(OBJDIR) $(S4_LIBNAME)
+	sh osx_gensetup.py.sh $(OBJDIR) $(S4_LIBNAME)
 	python setup.py build
+	#pip install -e .
 
 #### R extension
 
