--- a/conda_recipe/s4/meta.yaml
+++ b/conda_recipe/s4/meta.yaml
@@ -51,6 +51,8 @@ about:
 
   # The remaining entries in this section are optional, but recommended.
   description: |
+    These are conda packages of the below software. 
+    Victor Liu wrote the initial code but is not responsible for these packages.
     A program for computing electromagnetic fields in periodic, layered
     structures, developed by Victor Liu (victorliu@alumni.stanford.edu) of the
     Fan group in the Stanford Electrical Engineering Department.
