--- a/conda_recipe/s4/meta.yaml
+++ b/conda_recipe/s4/meta.yaml
@@ -12,35 +12,34 @@ source:
   #  `openssl sha256 <file name>`.
 
 build:
-  number: 0
-  skip: True  # [py<37]
+  number: 2
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - python {{ python }}
+    - python
     - setuptools
-    - numpy {{ numpy }}
-    - boost
+    - numpy
+    - libboost
     - suitesparse
     - mkl-devel [win]
     - openblas [unix]
 
   host:
-    - python {{ python }}
-    - numpy {{ numpy }}
-    - boost
+    - python
+    - numpy
+    - libboost
     - suitesparse
     - mkl-devel [win]
     - openblas [unix]
 
   run:
-    - python {{ python }}
+    - python
     - {{ pin_compatible('numpy') }}
-    - {{ pin_compatible('boost') }}
+#    - {{ pin_compatible('boost') }}
     - {{ pin_compatible('suitesparse') }}
-    - {{ pin_compatible('mkl-devel') }} [win]
+    - {{ pin_compatible('mkl') }} [win]
     - {{ pin_compatible('openblas') }} [unix]
 
 test:
@@ -56,6 +55,9 @@ about:
 
   # The remaining entries in this section are optional, but recommended.
   description: |
+    These are conda packages of the below software. Victor Liu wrote the 
+    initial code but is not responsible for these packages.
+    
     A program for computing electromagnetic fields in periodic, layered
     structures, developed by Victor Liu (victorliu@alumni.stanford.edu) of the
     Fan group in the Stanford Electrical Engineering Department.
